<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.libreinventory.libreinventory.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6">

        <Button
            android:id="@+id/button_write_inventory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:onClick="writeInventory"
            android:text="@string/do_inventory"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_del_inventory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:background="@android:color/holo_orange_dark"
            android:onClick="delInventory"
            android:text="@string/del_inventory"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_export_inventory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:onClick="exportInventory"
            android:text="@string/export_inventory"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_send_inventory"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:onClick="sendInventory"
            android:text="@string/send_inventory"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_import_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:onClick="importProduct"
            android:text="@string/import_inventory"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_about_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:onClick="about"
            android:text="@string/about_inventory"
            android:textSize="30sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
